--- a/.github/workflows/run-rust-tests-on-pr.yml
+++ b/.github/workflows/run-rust-tests-on-pr.yml
@@ -24,27 +24,30 @@ jobs:
           name: test-results
           path: target/debug/test-results.xml
 
+          
   check-tests:
     needs: test
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+  
       - name: Download test results
         uses: actions/download-artifact@v3
         with:
           name: test-results
-          path: test-results.xml
-
-      - name: Parse test results
-        run: cargo test --all --show-output --no-run --color always --verbose | grep -F 'failures:'
-
+          path: ./test-results
+  
+      - name: Check for test failures
+        id: check_failures
+        run: |
+          if grep -q 'FAILED' ./test-results/test-results.xml; then
+            echo "There are test failures."
+            echo "failure=true" >> $GITHUB_ENV
+          else
+            echo "All tests passed."
+          fi
+  
       - name: Fail if tests fail
-        if: steps.parse-test-results.outputs.failures > 0
-        uses: actions/github-script@v6
-        with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          script: |
-            github.actions.createStatus({
-              context: 'tests',
-              state: 'failure',
-              description: '❌ Tests failed, please fix before merging.'
-            })
+        if: env.failure == 'true'
+        run: exit 1
