--- a/rusty_hero_quest/Cargo.toml
+++ b/rusty_hero_quest/Cargo.toml
@@ -6,3 +6,5 @@ edition = "2021"
 [dependencies]
 criterion = "0.5.1"
 rand = "0.8.5"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
